# mailvalidator

./: .gitmodules  CHANGELOG.md  CLAUDE.md  CODEOWNERS  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
docs/: SECURITY_VERDICT.md
mailcheck/: __init__.py  assessor.py  cli.py  dns_utils.py  models.py  reporter.py
mailcheck/checks/: bimi.py  blacklist.py  dkim.py  dmarc.py  mta_sts.py  mx.py  smtp.py  spf.py  tlsrpt.py
mailvalidator/: __init__.py  assessor.py  cli.py  constants.py  dns_utils.py  models.py  reporter.py  verdict.py
mailvalidator/checks/: bimi.py  blacklist.py  dmarc.py  dnssec.py  mta_sts.py  mx.py  smtp.py  tlsrpt.py
mailvalidator/checks/smtp/: __init__.py  _check.py  _classify.py  _pqc.py  _tls_checks.py  _tls_probe.py
tests/: conftest.py  test_assessor.py  test_cli.py  test_constants.py  test_dns_utils.py  test_init.py  test_reporter.py  test_verdict.py
tests/checks/: test_bimi.py  test_blacklist.py  test_dkim.py  test_dmarc.py  test_dnssec.py  test_mta_sts.py  test_mx.py  test_pqc.py  test_smtp.py  test_spf.py  test_tlsrpt.py
