[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailcheck"
version = "0.1.0"
description = "Mail server configuration assessment CLI utility"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "dnspython>=2.6",
    "rich>=13.7",
    "typer>=0.12",
    "aiohttp>=3.9",
    "cryptography>=42",
]

[project.scripts]
mailcheck = "mailcheck.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mailcheck*"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]
addopts    = "--cov=mailcheck --cov-report=term-missing"